<?xml version="1.0" encoding="UTF-8" ?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="describe_item">Describe the item…</string>
    <string name="default_web_client_id" tools:ignore="TypographyDashes">795614038924-33qj1923cpm2m62vps6tsurm8ksv65c3.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_instructions">Enter your registered email address and we\'ll send you a link to reset your password</string>
    <string name="top_students">Top Students</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="logo">logo</string>
    <string name="ccafound">CCAFOUND,</string>
    <string name="found_your_lost_item_here">Found Your Lost Item Here!!</string>
    <string name="home_profile">Home Profile</string>
    <string name="cmangalao22_1351_cca_edu_ph">email</string>
    <string name="bscs_c305">Section</string>
    <string name="hi_christian_neil_mangalao">Name</string>
    <string name="notification">Notification</string>
    <string name="top_student_returned_lost_item">Top Student Returned Lost Item</string>
    <string name="reported_150">Reported: 150</string>
    <string name="christian_neil_mangalao">Christian Neil Mangalao</string>
    <string name="top_profile">Top_Profile</string>
    <string name="_1">1</string>
    <string name="course_section"><![CDATA[Course & Section / Department]]></string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="student_no">Student No</string>
    <string name="app_name">CCAFound</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="line">line</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="dont_acc">Don\'t have an account?</string>
    <string name="login">login</string>
    <string name="starting_logo">Starting Logo</string>
    <string name="logo_home">Logo Home</string>
    <string name="log_in">Log In</string>
    <string name="reset_password">Send Reset Link</string>
    <string name="forget_password">Forget Password</string>
    <string name="back">Back</string>
    <string name="ccafound_l">CCAFOUND</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="click_here">Click Here</string>
    <string name="submit">Submit</string>
    <string name="report_button">Report Button</string>
    <string name="student_number">Student Number</string>
    <string name="_221351">221351</string>
    <string name="personal_information">Personal Information</string>
    <string name="your_profile_information">Your Profile Information</string>
    <string name="others">Others</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="edit_information">Edit Information</string>
    <string name="log_out">Log Out</string>
    <string name="or_login_in_with">or</string>
    <string name="google_button">Google Button</string>
    <string name="add">Add</string>
    <string name="report">Report</string>
    <string name="terms">Terms</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lost_item">Lost Item</string>
    <string name="lost_found"><![CDATA[Lost&Found]]></string>
    <string name="loading">Loading…</string>
    <string name="date">Date</string>
    <string name="item_description">Item Description</string>
    <string name="report_items">Report Items</string>
    <string name="found_item">Found Item</string>
    <string name="file_upload">File Upload</string>
    <string name="upload_image">Upload Image</string>
    <string name="right_action">Right Action</string>
    <string name="left_action">Left Action</string>
    <string name="set_up_profile">Set Up Profile</string>
    <string name="update_information">Update Information</string>
    <string name="status">Status</string>
    <string name="status_items">Status Items</string>
    <string name="track_item">Track Item</string>
    <string name="drop_down_button">Drop Down Button</string>
    <string name="select_role">Select Role</string>
    <string name="course_department">Course-Section / Department</string>
    <string name="student_no_staff_id">Student No / Staff ID</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="role">Role</string>
    <string name="describe_your_item_here">Describe Your Item Here</string>
    <string name="notification_title">Notification Title</string>
    <string name="this_is_the_message">This is the message</string>
    <string name="notification_message_here">Notification message here.</string>
    <string name="notification_icon">notification_icon</string>
    <string name="_12_45_pm">12:45 PM</string>
    <string name="this_is_the_notification_message">This is the notification message.</string>
    <string name="analytics_lost_found"><![CDATA[Analytics Lost & Found]]></string>
    <string name="lost_found_statistics"><![CDATA[Lost & Found Statistics]]></string>
    <string name="slide_to_login">Slide to Start</string>
    <string name="item_image">item_image</string>
    <string name="_0">0</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="mark_all">Mark all</string>
    <string name="notification_message_content">Notification message content</string>
    <string name="notification_image">Notification Image</string>
    <string name="see_all">See All</string>
    <string name="notification_message_goes_here">Notification message goes here</string>
    <string name="october_7_2025_12_45_pm">October 7, 2025 – 12:45 PM</string>
    <string name="unread_status_icon">Unread Status Icon</string>
    <string name="top_users_who_found_items">Top Users Who Found Items</string>
    <string name="no_users_have_found_items_yet">No users have found items yet.</string>
    <string name="user_profile">user profile</string>
    <string name="john_doe">John Doe</string>
    <string name="found_items_5">Found Items: 5</string>

    <string-array name="categories">
        <item>Electronics Devices</item>
        <item>Accessories</item>
        <item>School Supplies</item>
        <item>Clothing</item>
        <item>Documents</item>
        <item>Others</item>
    </string-array>

</resources>