<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_profile_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/dark_green"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <include layout="@layout/bottom_toolbar" />

        </androidx.appcompat.widget.Toolbar>

        <include
            android:id="@+id/top"
            layout="@layout/top_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="658dp"
            android:layout_margin="20dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/cardviewdis1"
            android:foregroundGravity="center"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/status_box_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayoutBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_box_txt">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    tools:ignore="UselessParent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/med_white"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/image_upload"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/upload_image"
                            app:srcCompat="@drawable/add_photo" />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/profile_input_name"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/info_box"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:textColor="#000000"
                android:enabled="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutBtn"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/profile_input_section"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="13dp"
                android:autofillHints=""
                android:background="@drawable/info_box"
                android:ems="10"
                android:hint="@string/section"
                android:inputType="text"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_input_name"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/profile_input_email"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/info_box"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:textColor="#000000"
                android:enabled="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_input_section"
                tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />


            <ImageButton
                android:id="@+id/profile_status_btn"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:contentDescription="@string/go_to_status"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_input_email"
                app:srcCompat="@drawable/status"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/profile_save_btn"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:contentDescription="@string/go_to_status"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@+id/profile_Activity_btn"
                app:layout_constraintStart_toEndOf="@+id/profile_status_btn"
                app:layout_constraintTop_toBottomOf="@+id/profile_input_email"
                app:srcCompat="@drawable/save" />

            <ImageButton
                android:id="@+id/profile_Activity_btn"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:contentDescription="@string/go_to_status"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_input_email"
                app:srcCompat="@drawable/activity" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_status_btn"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/prof_save_txt"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/prof_act_txt"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/profile_save_btn" />

            <TextView
                android:id="@+id/prof_act_txt"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/activity"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_Activity_btn"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="44dp"
                android:background="@color/dark_grey"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prof_save_txt"
                app:layout_constraintVertical_bias="0.921"
                tools:ignore="VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>